--- a/CurriculumNMG/CSS/curriculum.css
+++ b/CurriculumNMG/CSS/curriculum.css
@@ -2,7 +2,7 @@
     padding:0;
     margin:0;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Tahoma, sans-serif;
 }
 
 @keyframes animacion{
@@ -30,8 +30,7 @@ html{
 .linea{
     border-top: 1px solid;
     background-color: #260C0C;
-    height: 4
-    px;
+    height: 4px;
     max-width: 100%;
     padding: 0;
     margin: 20px;
